@@ -544,3 +544,17 @@ table.g-albums-table .g-albumdesc-cell {
 .g-random-block, .g-feature-block {
     text-align: center;
 }
+
+/******************** Usage Page ********************/
+
+.g-usageTable {
+	margin: 0 auto;
+}
+
+.g-usageTable th {
+	border-bottom: 3px double #000;
+}
+
+.g-usageTable td {
+	padding: 2px;
+}
