@@ -1,3 +1,10 @@
+2007-01-28 Jens Tkotz <jens@peino.de> 1.6-RC1-b7
+
+ * NEW: Added usage.php and support files for it.
+        Main code and idea is from Dave Moore and Joan McGalliard.
+        
+        It shows the diskusage per Album or per user.
+
 2007-01-16 Jens Tkotz <jens@peino.de> 1.6-RC1-b6
 
  * Fix: Images for shadow frame were broken.
